handling the sign up and log in page css

--- a/login.html
+++ b/login.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>NourishWise | Login</title>
-  <style>
+  <link rel="stylesheet" href="styles/login_sign-up.css">
+  <!-- <style>
     /* Add CSS directly here for login styling */
     .container {
       text-align: center;
@@ -57,7 +58,7 @@
     .signup a:hover {
       text-decoration: underline;
     }
-  </style>
+  </style> -->
 </head>
 
 <body>
