Fixing a bug with index-2.html dietician nav list

--- a/diet-plan.html
+++ b/diet-plan.html
@@ -34,7 +34,7 @@
         <li><a href="index-2.html">Home</a></li>
         <li><a href="#" id="active">Diet Plan</a></li>
         <li><a href="insight.html">Insights</a></li>
-        <li><a href="detictian.html">Dieticians</a></li>
+        <li><a href="dietictian.html">Dieticians</a></li>
         <li><a href="contactUs.html" class="btn">Contact Us</a></li>
       </ul>
         <div class="action-btn-container">
