Fixing a bug with index-2.html dietician nav list in Article-dieting_intro.html

--- a/Article-dieting_intro.html
+++ b/Article-dieting_intro.html
@@ -101,21 +101,22 @@
       </div>
       <ul class="nav-list" id="nav-list">
         <li>
-          <a href="index.html">Home</a>
+          <a href="index-2.html">Home</a>
         </li>
         <li><a href="diet-plan.html">Diet Plan</a></li>
         <li><a href="insight.html" id="active">Insights</a></li>
         <li><a href="dieticians.html">Dieticians</a></li>
         <li><a href="contactUs.html" class="btn">Contact Us</a></li>
       </ul>
-      <div class="action-btn-container">
-        <div class="user-profile">
-          <img src="assets/img-1.jpg" alt="user-profile">
+        <div class="action-btn-container">
+          <a href="customer-dashboard.html" class="user-profile">
+            <!-- <img src="assets/img-1.jpg" alt="user-profile" /> -->
+            <i class="fas fa-user"></i>
+          </a>
+          <div class="menu-toggle" id="mobile-menu" onclick="toggleNavbar()">
+            <i class="fas fa-bars">=</i>
+          </div>
         </div>
-        <!-- <div class="menu-toggle" id="mobile-menu">
-          <i class="fas fa-bars">=</i>
-        </div> -->
-      </div>
     </nav>
   </header>
 
