Removed Article-dieting_intro.html from target=blank

--- a/insight.html
+++ b/insight.html
@@ -95,7 +95,7 @@
               Dieting is more than just a temporary change in eating habits;
               it’s a structured approach to nourishing your body based...
             </p>
-            <a href="Article-dieting_intro.html" target="_blank" class="btn"
+            <a href="Article-dieting_intro.html" class="btn"
               >Read More</a
             >
           </article>
