--- a/contactUs.html
+++ b/contactUs.html
@@ -1,77 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/contactUs.css" />
+    <title>NourishWise Contact Us</title>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="styles/style.css" />
-  <link rel="stylesheet" href="styles/contactUs.css" />
-  <title>NourishWise Contact Us</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMDE8cvdRa7zBbb4T3N6g5RhiB2V1Knq8MkHx6"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://kit.fontawesome.com/f70dd16b18.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMDE8cvdRa7zBbb4T3N6g5RhiB2V1Knq8MkHx6" crossorigin="anonymous" />
-  <script src="https://kit.fontawesome.com/f70dd16b18.js" crossorigin="anonymous"></script>
-</head>
-
-<body>
-  <!-- =========================== HEADER SECTION ===========================-->
-  <header id="header">
-    <nav>
-      <div class="logo">
-        <img src="assets/diet_logo_t.png" alt="NourishWise logo" />
-      </div>
-      <ul class="nav-list" id="nav-list">
-        <li>
-          <!-- <i class="fas fa-bars"></i> -->
-          <a href="index-2.html">Home</a>
-        </li>
-        <li><a href="diet-plan.html">Diet Plan</a></li>
-        <li><a href="insight.html">Insights</a></li>
-        <li><a href="dieticians.html">Dieticians</a></li>
-        <li>
-          <a href="contactUs.html" class="btn">Contact Us</a>
-        </li>
-      </ul>
-      <div class="action-btn-container">
-        <a href="customer-dashboard.html" class="user-profile">
-          <!-- <img src="assets/img-1.jpg" alt="user-profile" /> -->
-          <i class="fas fa-user"></i>
-        </a>
-        <div class="menu-toggle" id="mobile-menu" onclick="toggleNavbar()">
-          <i class="fas fa-bars">=</i>
+  <body>
+    <!-- =========================== HEADER SECTION ===========================-->
+    <header id="header">
+      <nav>
+        <div class="logo">
+          <img src="assets/diet_logo_t.png" alt="NourishWise logo" />
         </div>
-      </div>
-    </nav>
-  </header>
+        <ul class="nav-list" id="nav-list">
+          <li>
+            <!-- <i class="fas fa-bars"></i> -->
+            <a href="index-2.html">Home</a>
+          </li>
+          <li><a href="diet-plan.html">Diet Plan</a></li>
+          <li><a href="insight.html">Insights</a></li>
+          <li><a href="dieticians.html">Dieticians</a></li>
+          <li>
+            <a href="contactUs.html" class="btn">Contact Us</a>
+          </li>
+        </ul>
+        <div class="action-btn-container">
+          <a href="customer-dashboard.html" class="user-profile">
+            <!-- <img src="assets/img-1.jpg" alt="user-profile" /> -->
+            <i class="fas fa-user"></i>
+          </a>
+          <div class="menu-toggle" id="mobile-menu" onclick="toggleNavbar()">
+            <i class="fas fa-bars">=</i>
+          </div>
+        </div>
+      </nav>
+    </header>
 
-  <!-- =========================== FORM SECTION ===========================-->
-  <div class="contact-container">
-    <h1>Contact Us</h1>
-    <form action="index-2.html" class="contactUs-form">
-      <div class="field-container">
-        <input type="text" name="name" placeholder="Enter your Fullname..." required />
-      </div>
-      <div class="field-container">
-        <input type="email" name="email" placeholder="Enter your Email..." required />
-      </div>
-      <div class="field-container message">
-        <input type="text" name="message" id="message" placeholder="What would you like to say..." required />
-      </div>
-      <div class="field-container">
-        <input type="submit" value="Send your message" id="sendMessageButton" class="btn" required />
-      </div>
-    </form>
-  </div>
+    <!-- =========================== FORM SECTION ===========================-->
+    <div class="contact-container">
+      <h1>Contact Us</h1>
+      <form action="index-2.html" class="contactUs-form">
+        <div class="field-container">
+          <input
+            type="text"
+            name="name"
+            placeholder="Enter your Fullname..."
+            required
+          />
+        </div>
+        <div class="field-container">
+          <input
+            type="email"
+            name="email"
+            placeholder="Enter your Email..."
+            required
+          />
+        </div>
+        <div class="field-container message">
+          <textarea
+            id="message"
+            name="message"
+            placeholder="Write your message here..."
+          ></textarea>
+        </div>
+        <div class="field-container">
+          <input
+            type="submit"
+            value="Send your message"
+            id="sendMessageButton"
+            class="btn"
+            required
+          />
+        </div>
+      </form>
+    </div>
 
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      document
-        .getElementById("sendMessageButton")
-        .addEventListener("click", function () {
-          alert("Sent successfully");
-        });
-    });
-  </script>
-</body>
-
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        document
+          .getElementById("sendMessageButton")
+          .addEventListener("click", function (event) {
+            event.preventDefault(); // Prevents form from submitting
+            alert("Sent successfully");
+          });
+      });
+    </script>
+  </body>
 </html>
