I added images in the testimonial cards (index.html)

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
           <!-- Testimonial Card Start -->
           <div class="testimonial-card swiper-slide">
             <div class="img">
-              <img src="assets/img-1.jpg" alt="Mohammed Super" />
+              <img src="assets/img-2.png" alt="Mohammed Super" />
             </div>
             <div class="text">
               <h4>Mohammed Super</h4>
@@ -247,7 +247,7 @@
           <!-- Testimonial Card Start -->
           <div class="testimonial-card swiper-slide">
             <div class="img">
-              <img src="assets/img-1.jpg" alt="Igbokwe Valerie" />
+              <img src="assets/miko.jpeg" alt="Igbokwe Valerie" />
             </div>
             <div class="text">
               <h4>Igbokwe Valerie</h4>
@@ -262,7 +262,7 @@
           <!-- Testimonial Card Start -->
           <div class="testimonial-card swiper-slide" data-aos="zoom-in-up">
             <div class="img">
-              <img src="assets/img-1.jpg" alt="Ahmed.I" />
+              <img src="assets/img-4.png" alt="Ahmed.I" />
             </div>
             <div class="text">
               <h4>Ahmed.I</h4>
@@ -277,7 +277,7 @@
           <!-- Testimonial Card Start -->
           <div class="testimonial-card swiper-slide">
             <div class="img">
-              <img src="assets/img-1.jpg" alt="Progress 4" />
+              <img src="assets/img-3.png" alt="Progress 4" />
             </div>
             <div class="text">
               <h4>Isha</h4>
