I added a title image link personal-dietPlan.html

--- a/personal-dietPlan.html
+++ b/personal-dietPlan.html
@@ -214,8 +214,7 @@
       </ul>
       <div class="action-btn-container">
         <a href="customer-dashboard.html" class="user-profile">
-          <!-- <img src="assets/img-1.jpg" alt="user-profile" /> -->
-          <i class="fas fa-user"></i>
+          <img src="assets/img-1.jpg" alt="user-profile" />
         </a>
         <div class="menu-toggle" id="mobile-menu" onclick="toggleNavbar()">
           <i class="fas fa-bars">=</i>
@@ -239,7 +238,7 @@
       <form id="dietPlanForm" class="diet-plan-form">
         <div class="form-container">
           <h3>Create Your Diet Plan</h3>
-          
+
           <!-- Diet Plan Name -->
           <label for="planName">Diet Plan Name:</label>
           <input type="text" id="planName" placeholder="Enter Diet Plan Name" required />
@@ -276,7 +275,6 @@
       document.getElementById('dietPlanForm').style.display = 'flex'
     }
     function closeDietPlanForm() {
-      // document.getElementById('closeDietPlanForm').style.display = 'none'
       document.getElementById('dietPlanForm').style.display = 'none'
     }
   </script>
