correct img aspect ration to [1:1] (to be square) this way the image can have a smooth round shape and add it in this page

--- a/index-2.html
+++ b/index-2.html
@@ -229,7 +229,7 @@
           <!-- Testimonial Card Start -->
           <div class="testimonial-card swiper-slide">
             <div class="img">
-              <img src="assets/tech-inspire.PNG" alt="Mohammed Super" />
+              <img src="assets/img-2.png" alt="Mohammed Super" />
             </div>
             <div class="text">
               <h4>Mohammed Super</h4>
@@ -260,7 +260,7 @@
           <!-- Testimonial Card Start -->
           <div class="testimonial-card swiper-slide" data-aos="zoom-in-up">
             <div class="img">
-              <img src="assets/ahmed.jpg" alt="Ahmed.I" />
+              <img src="assets/img-4.png" alt="Ahmed I" />
             </div>
             <div class="text">
               <h4>Ahmed.I</h4>
@@ -275,7 +275,7 @@
           <!-- Testimonial Card Start -->
           <div class="testimonial-card swiper-slide">
             <div class="img">
-              <img src="assets/isha.jpeg" alt="Progress 4" />
+              <img src="assets/img-3.png" alt="Progress 4" />
             </div>
             <div class="text">
               <h4>Isha</h4>
@@ -285,20 +285,6 @@
               </p>
             </div>
           </div>
-          <!-- Testimonial Card End -->
-
-          <!-- Testimonial Card Start -->
-          <!-- <div class="testimonial-card>
-            <div class="img">
-              <img src="assets/img-1.jpg" alt="Progress 5">
-            </div>
-            <div class="text">
-              <h4>James</h4>
-              <p>"Thanks to NourishWise, I’ve achieved my health goals without any of the confusion I used to feel
-                about
-                nutrition."</p>
-            </div>
-          </div> -->
           <!-- Testimonial Card End -->
         </div>
       </div>
