--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
           <!-- Testimonial Card Start -->
           <div class="testimonial-card swiper-slide" data-aos="zoom-in-up">
             <div class="img">
-              <img src="assets/img-4.png" alt="Ahmed.I" />
+              <img src="assets/img-4.png" alt="Ahmed I" />
             </div>
             <div class="text">
               <h4>Ahmed.I</h4>
