Made the DASH diet get started page

--- a/diet-plan.html
+++ b/diet-plan.html
@@ -69,7 +69,7 @@
             <h4>DASH Diet</h4>
             <p>Low-salt, nutrient-rich diet aimed at lowering blood pressure.</p>
             <br>
-            <a href="#contact" class="btn">Get Started</a>
+            <a href="Dash-article.html" class="btn">Get Started</a>
           </div>
         </div>
 
