--- a/customer-dashboard.html
+++ b/customer-dashboard.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="styles/style.css">
   <link rel="stylesheet" href="styles/diet-plan.css">
   <link rel="stylesheet" href="styles/dashboard/dashboard.css">
+  <link rel="stylesheet" href="styles/dashboard/dash_home-logout-setting.css">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMDE8cvdRa7zBbb4T3N6g5RhiB2V1Knq8MkHx6" crossorigin="anonymous" />
