Made the Flexitarian  get started page

--- a/diet-plan.html
+++ b/diet-plan.html
@@ -76,13 +76,13 @@
         <!-- Feature card -->
         <div class="dietPlan-card">
           <div class="img">
-            <img src="assets/flax-diet.jpeg" alt="">
+            <img src="assets/flax-diet.jpg" alt="">
           </div>
           <div class="text">
             <h4>Flexitarian Diet</h4>
             <p>Primarily plant-based diet with occasional meat or fish.</p>
             <br>
-            <a href="#contact" class="btn">Get Started</a>
+            <a href="Flexitarian-article.html" class="btn">Get Started</a>
           </div>
         </div>
 
