--- a/customer-dashboard.html
+++ b/customer-dashboard.html
@@ -380,7 +380,7 @@
 
   <!-- Custom scripts -->
   <script type="module" src="script/store-data.js"></script>
-  <script src="script/script.js"></script>
+  <!-- <script src="script/script.js"></script> -->
   <script src="script/print_food_log.js"></script>
   <script src="script/food_log_form.js"></script>
   <script src="script/dashboard.js"></script>
