--- a/diet-plan.html
+++ b/diet-plan.html
@@ -10,6 +10,7 @@
   <!-- Stylesheets -->
   <link rel="stylesheet" href="styles/style.css">
   <link rel="stylesheet" href="styles/diet-plan.css">
+  <link rel="stylesheet" href="styles/responsive.css" />
 
   <!-- Fontawesome Icon link -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -31,6 +32,11 @@
         <img src="assets/diet_logo_t.png" alt="NourishWise logo">
       </div>
       <ul class="nav-list" id="nav-list">
+        <div class="aside-top">
+          <img src="assets/diet_logo_t.png" alt="">
+          <h1>NourishWise</h1>
+          <a href="javascript:void(0)" class="closebtn" onclick="closeNavPanel()">×</a>
+        </div>
         <li><a href="index-2.html">Home</a></li>
         <li><a href="#" id="active">Diet Plan</a></li>
         <li><a href="insight.html">Insights</a></li>
@@ -42,8 +48,8 @@
           <img class="profileImage" src="" class="profile-pic" alt="Profile Picture"
             style="width: 50px; height: 50px;" />
         </a>
-        <div class="menu-toggle" id="mobile-menu" onclick="toggleNavbar()">
-          <i class="fas fa-bars">=</i>
+        <div class="menu-toggle">
+          <span style="font-size:30px;cursor:pointer" onclick="openNavPanel()">☰</span>
         </div>
       </div>
     </nav>
@@ -178,6 +184,7 @@
 
 
     <script src="script/script.js"></script>
+
     <!-- fontawesome JS -->
     <script src="https://kit.fontawesome.com/f70dd16b18.js" crossorigin="anonymous"></script>
     <!-- JavaScript for Swiper, AOS, and other interactive elements -->
