--- a/index-2.html
+++ b/index-2.html
@@ -56,10 +56,15 @@
       <div class="logo">
         <img src="assets/diet_logo_t.png" alt="NourishWise logo" />
       </div>
+
       <ul class="nav-list" id="nav-list">
-        <li>
-          <a href="" id="active">Home</a>
-        </li>
+        <div class="aside-top">
+          <img src="assets/diet_logo_t.png" alt="">
+          <h1>NourishWise</h1>
+          <a href="javascript:void(0)" class="closebtn" onclick="closeNavPanel()">×</a>
+        </div>
+
+        <li> <a href="" id="active">Home</a></li>
         <li><a href="diet-plan.html">Diet Plan</a></li>
         <li><a href="insight.html">Insights</a></li>
         <li><a href="dieticians.html">Dieticians</a></li>
@@ -70,9 +75,10 @@
           <img class="profileImage" src="" class="profile-pic" alt="Profile Picture"
             style="width: 50px; height: 50px;" />
         </a>
-        <div class="menu-toggle" id="mobile-menu" onclick="toggleNavbar()">
-          <i class="fas fa-bars">=</i>
+        <div class="menu-toggle">
+          <span style="font-size:30px;cursor:pointer" onclick="openNavPanel()">☰</span>
         </div>
+      </div>
       </div>
     </nav>
   </header>
@@ -394,6 +400,8 @@
       </div>
     </footer>
   </main>
+
+  <script src="script/script.js"></script>
   <script>
     AOS.init();
     const swiper = new Swiper(".main-swiper", {
